--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/09/19 13:27:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestScript.Close_Browser()[pri:0, instance:org.shl.testng.Flipcart.TestScript@42d80b78]">&lt;&lt;Close_Browser</td> 
-<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/09/19 13:27:28</td>   <td>-15776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript.Launch_Browser()[pri:0, instance:org.shl.testng.Flipcart.TestScript@42d80b78]">&gt;&gt;Launch_Browser</td> 
-<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
-<tr bgcolor="97c064">  <td>19/09/19 13:27:40</td>   <td>-2879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.Login()[pri:0, instance:org.shl.testng.Flipcart.TestScript@42d80b78]">Login</td> 
-  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/19 16:04:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestScript.beforeMethod()[pri:0, instance:org.shl.testng.Flipcart.TestScript@5622fdf]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>19/09/19 16:04:36</td>   <td>8443</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Launcher.closeBrowser()[pri:0, instance:org.shl.testng.Flipcart.TestScript@5622fdf]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="99f37e">  <td>19/09/19 16:04:13</td>   <td>-14504</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Launcher.launchBrowser()[pri:0, instance:org.shl.testng.Flipcart.TestScript@5622fdf]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/09/19 16:04:28</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScript.login()[pri:0, instance:org.shl.testng.Flipcart.TestScript@5622fdf]">login</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
 </table>
